--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 beautifulsoup4==4.4.0
+boto==2.38.0
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.2
 django-hvad==1.3.0
 django-libs==1.66.12
+django-storages==1.1.8
 django-toolbelt==0.0.1
 factory-boy==2.5.2
 flake8==2.5.1
