--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,46 @@
+awscli==1.10.39
 beautifulsoup4==4.4.0
 boto==2.38.0
+botocore==1.4.29
+colorama==0.3.3
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.2
+django-auditlog==0.3.3
+django-filter==0.13.0
 django-hvad==1.3.0
+django-jsonfield==1.0.0
 django-libs==1.66.12
 django-storages==1.1.8
 django-toolbelt==0.0.1
+djangorestframework==3.3.3
+docutils==0.12
 factory-boy==2.5.2
 flake8==2.5.1
+futures==3.0.5
 gunicorn==19.4.1
 httplib2==0.9.1
+jmespath==0.9.0
 lockfile==0.10.2
+Markdown==2.6.6
 mccabe==0.3.1
 oauth2==1.5.211
 oauthlib==1.0.3
 pep8==1.5.7
 Pillow==3.0.0
 psycopg2==2.6.1
+pyasn1==0.1.9
 pyflakes==1.0.0
 PyJWT==1.4.0
+python-dateutil==2.5.3
 python-oauth2==1.0.0
 python-openid==2.2.5
 python-social-auth==0.2.13
 requests==2.8.1
 requests-oauthlib==0.5.0
+rsa==3.4.2
+s3transfer==0.0.1
 six==1.10.0
 static3==0.6.1
 uWSGI==2.0.11.2
-wheel==0.24.0
 whitenoise==2.0.6
-django-auditlog==0.3.3
